<resources>
    <string name="app_name">NoticeHub-AndroidApp</string>
    <string name="welcome">Welcome!</string>
    <string name="please_enter_your_registered_email_address">Please Enter Your Registered Email Address.</string>
    <string name="app_logo">AppLogo</string>
    <string name="email">Email</string>
    <string name="verify">Verify</string>
    <string name="en">EN</string>
    <string name="please_set_your_password">Please Set Your Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="set_password">Set Password</string>
    <string name="hi_prem">Hi, Prem</string>
    <string name="enter_credentials_to_login">Enter Credentials To Login</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="tap_to_login_with_fingerprint">Tap to Login with Fingerprint</string>
    <string name="remember_me">Remember me</string>
    <string name="hi">"Hi, "</string>
    <string name="prem">Prem</string>
    <string name="forgot_passwordd">Forgot Password</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_otp_sent_to_your_email_address">Enter The OTP Sent To Your Email Address</string>
    <string name="create_your_new_password">Create Your New Password</string>
    <string name="new_password">New Password</string>
    <string name="update_password">Update Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="home">Home</string>
    <string name="notices">Notices</string>
    <string name="feedback">Feedback</string>
    <string name="profile">Profile</string>
    <string name="student_portal">Student Portal</string>
    <string-array name="languages">
        <item>EN</item>
        <item>NE</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject">Subject</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="description">Description</string>
    <string name="write_your_feedback_here">Write your feedback here...</string>
    <string name="feedback_to">Feedback To</string>
    <string name="select_recipient">Select Recipient</string>
    <string name="send">Send</string>
    <string name="teacher_portal">Teacher Portal</string>
    <string name="_9862539180">9862539180</string>
    <string name="prem_rawal">Prem Rawal</string>
    <string name="prem24_gmail_com">prem24@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_info">My Info</string>
    <string name="first_name">First Name :</string>
    <string name="last_name">Last Name :</string>
    <string name="setting">Setting</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="biometric_login">Biometric Login</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="log_out">Log Out</string>
    <string name="customer_support">Customer Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us">About Us</string>
    <string name="current_password">Current Password</string>
    <string name="update_your_password">Update Your Password</string>
    <string name="update_your_email">Update Your Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="update_email">Update Email</string>
    <string name="email_verification">Email Verification</string>
    <string name="notice_board">Notice Board</string>
    <string name="search_notice">Search notice</string>
    <string name="exam">Exam</string>
    <string name="all">All</string>
    <string name="view_more">View More</string>
    <string name="add_notice">Add Notice</string>
    <string name="faculty">Faculty</string>
    <string name="select_faculty">Select Faculty</string>
    <string name="level">Level</string>
    <string name="select_level">Select Level</string>
    <string name="program">Program</string>
    <string name="select_program">Select Program</string>
    <string name="semester">Semester</string>
    <string name="select_semester">Select Semester</string>
    <string name="publish_notice">Publish Notice</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter Title</string>
    <string name="file">File</string>
    <string name="upload_a_file">Upload a file</string>
    <string name="type_here">Type here ...</string>
    <string name="notice_details">Notice Details</string>
    <string name="publish_to">Publish To</string>

</resources>