<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="360dp"
        android:layout_height="600dp"
        android:fillViewport="true"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:orientation="vertical"
            android:padding="20dp"
            tools:ignore="MissingConstraints,UselessParent,TextSizeCheck">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvBackBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    app:drawableStartCompat="@drawable/back_arrow_icon"
                    tools:ignore="VisualLintOverlap" />

                <!-- Welcome Text -->
                <TextView
                    android:id="@+id/welcome_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_notice"
                    android:textColor="@color/blue"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </FrameLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/notice_details"
                android:textColor="@android:color/white"
                android:paddingStart="100dp"
                android:textSize="20sp"
                android:background="@drawable/heading_background"
                android:backgroundTint="@color/blue"
                android:padding="10dp"
                android:layout_gravity="start"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_gravity="start"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTint="@color/black"
                android:background="@drawable/edittext_background"
                android:hint="@string/enter_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:text="@string/file"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUploadFile"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_background"
                android:drawableLeft="@drawable/upload_file_icon"
                android:hint="@string/upload_a_file"
                android:paddingStart="94dp"
                android:paddingEnd="86dp"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/dim_color"
                tools:ignore="RtlHardcoded,RtlSymmetry,VisualLintButtonSize,TextContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_gravity="start"
                android:textStyle="bold"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNoticeDescription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/dim_color"
                    android:gravity="top|start"
                    android:hint="@string/type_here"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/publish_to"
                android:textColor="@android:color/white"
                android:paddingStart="115dp"
                android:textSize="20sp"
                android:background="@drawable/heading_background"
                android:backgroundTint="@color/blue"
                android:padding="10dp"
                android:layout_gravity="start"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/faculty"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_gravity="start"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/etFaculty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/drop_down_arrow"
                android:drawableTint="@color/black"
                android:background="@drawable/edittext_background"
                android:hint="@string/select_faculty"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/level"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_gravity="start"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/etLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/drop_down_arrow"
                android:drawableTint="@color/black"
                android:background="@drawable/edittext_background"
                android:hint="@string/select_level"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/program"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_gravity="start"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/etProgram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/drop_down_arrow"
                android:drawableTint="@color/black"
                android:background="@drawable/edittext_background"
                android:hint="@string/select_program"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:text="@string/semester"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etSemester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/drop_down_arrow"
                android:drawableTint="@color/black"
                android:background="@drawable/edittext_background"
                android:hint="@string/select_semester"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:layout_marginTop="5dp"
                android:padding="10dp"
                android:textSize="18sp" />


            <!-- Verify Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPublishNotice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittext_background"
                android:minHeight="48dp"
                android:padding="10dp"
                android:text="@string/publish_notice"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/blue"
                tools:ignore="VisualLintButtonSize" />


        </LinearLayout>

    </ScrollView>


</LinearLayout>